# databae-ss

./: .gitignore  README.md  pyproject.toml
backend/: README.md  agent_class.py  agent_funcs.py  agents.py  analyzer_tools.py  database_tools.py  db_tools.py  groq_tools.py  instructions.py  main.py  pyproject.toml  server.py  test.py
backend/agent_network/: main.py  tempCodeRunnerFile.py
backend/agent_network/agents/: agent_helper.py  analyzer.py  checker.py  executor.py  generator.py  manager.py  respondent.py
backend/agent_network/db/: db_tools.py
backend/agent_network/static/: instructions.py  llm.py
backend/agent_network/tools/: bar_chart_tool.py  pie_chart_tool.py  predictive_tool.py  table_tool.py
backend/langgraph/agents/: agent_class.py  generator.py
backend/langgraph/static/: llm.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/Components/: AgentStatus.tsx  Background.tsx  ChatInput.tsx
frontend/src/Components/DataConnection/: DatabaseConnection.tsx  InputField.tsx
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/Dashboard/: page.tsx
frontend/src/app/connection/: page.tsx
frontend/src/app/dashboard/: page.tsx
groq/: main.py
