[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
poetry = "^1.8.4"
fastapi = "^0.115.3"
python-dotenv = "^1.0.1"
uvicorn = "^0.32.0"
crewai = "^0.76.2"
crewai-tools = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
