[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
poetry = "^1.8.4"
fastapi = "^0.115.3"
python-dotenv = "^1.0.1"
uvicorn = "^0.32.0"
crewai = "^0.76.2"
crewai-tools = "^0.13.2"
langchain-groq = "^0.2.0"
langchain-community = "^0.3.3"
langgraph = "^0.2.39"
mysql-connector-python = "^9.1.0"
langchain = "^0.3.4"
langchain-openai = "^0.2.3"
langsmith = "^0.1.137"
pandas = "^2.2.3"
langchain-experimental = "^0.3.2"
matplotlib = "^3.9.2"
langchain-core = "^0.3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
